# fust

./: Cargo.toml  README.md
src/: ascii.rs  darwin.rs  linux.rs  main.rs
