[package]
name = "fust"
version = "0.1.1"
edition = "2024"
description = "A fast system info tool written in Rust"
license = "MIT"
repository = "https://github.com/temidaradev/fust"
homepage = "https://github.com/temidaradev/fust"

[dependencies]
libc = "0.2.185"
pci-ids = "0.2.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
